# DRM-ESG-Scoring

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
config/: scoring_profiles.yaml
frontend/: index.html  package.json
frontend/src/: main.tsx
frontend/src/components/: PillarCard.tsx  ScoreGauge.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx
src/api/: main.py  provenance.py  rag_routes.py  routes.py
src/audit/: ledger.py
src/graph/: graph_service.py  in_memory_graph.py  neo4j_client.py  schema.py
src/ingestion/: extractor.py
src/models/: domain.py
src/ontology/: esg_ontology.py
src/rag/: graph_retriever.py  synthesizer.py
src/scoring/: engine.py  peer_benchmarks.py
src/semantic/: concept_layer.py  regulatory_crosswalk.py
src/tasks/: pipeline.py
tests/: test_audit.py  test_ingestion.py  test_peer_benchmarks.py  test_scoring.py
